corrected bug on navbar stayes back of container, added z-index to both

--- a/src/styles/banner.css
+++ b/src/styles/banner.css
@@ -24,6 +24,7 @@
   animation-name: rotate;
   animation-duration: .3s;
   animation-fill-mode:forwards;
+  animation-delay: 0.3s;
 }
 @keyframes rotate {
   0% {
