--- a/src/styles/container.css
+++ b/src/styles/container.css
@@ -21,6 +21,7 @@ ul {
   box-shadow: 0px 0px 5px black;
   background-color:  var(--transparency);
   backdrop-filter: blur(15px);
+  z-index: 1;
 }
 
 iframe {
