--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -30,7 +30,7 @@
   position:inherit;
   float: left;
   text-align: left;
-  padding: 60px;
+  padding: 60px 10%;
 
   animation: float 2s ease-in-out infinite;
 }
@@ -40,6 +40,8 @@
   float: right;
   margin-top: 80px;
   text-align: right;
+  padding: 60px 0;
+  padding-right: 10%
 }
 
 @media screen and (max-width: 1100px) {
