--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -15,6 +15,7 @@
   box-shadow: 0px 0px 10px var(--shadow);
   background-color:  var(--transparency);
   backdrop-filter: blur(5px);
+  z-index: 2;
 }
 
 .menu {
@@ -27,6 +28,7 @@
   border-radius: 20px;
   align-items: center;
   justify-content: center;
+  z-index: 3;
 }
 
 .navbar h2 {
